--- a/PhasmoTimer.vcxproj
+++ b/PhasmoTimer.vcxproj
@@ -171,10 +171,12 @@
     <ClCompile Include="src\fonts.cpp" />
     <ClCompile Include="src\foregroundtracker.cpp" />
     <ClCompile Include="src\gui.cpp" />
+    <ClCompile Include="src\hud_bar.cpp" />
     <ClCompile Include="src\imgui_wrappers.cpp" />
     <ClCompile Include="src\input.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\render.cpp" />
+    <ClCompile Include="src\stamina.cpp" />
     <ClCompile Include="src\timer.cpp" />
     <ClCompile Include="src\tools.cpp" />
     <ClCompile Include="src\updater.cpp" />
@@ -194,6 +196,7 @@
     <ClInclude Include="src\font_comicz.h" />
     <ClInclude Include="src\foregroundtracker.h" />
     <ClInclude Include="src\gui.h" />
+    <ClInclude Include="src\hud_bar.h" />
     <ClInclude Include="src\imgui_wrappers.h" />
     <ClInclude Include="src\input.h" />
     <ClInclude Include="src\lockfreequeue.hpp" />
@@ -201,6 +204,7 @@
     <ClInclude Include="src\render.h" />
     <ClInclude Include="src\resource.h" />
     <ClInclude Include="src\singleton.h" />
+    <ClInclude Include="src\stamina.h" />
     <ClInclude Include="src\stb_image.hpp" />
     <ClInclude Include="src\timer.h" />
     <ClInclude Include="src\tools.h" />
